# ThamesConnectivityAnalysis

./: .gitignore  README.md  pyproject.toml  setup.sh
config/: ingest_config.yaml
data/processed/spatial/: crossing_count.csv  edge_is_thames_crossing.csv  station_bank.csv
data/processed/transit/: edges.csv  edges_london.csv  stations.csv  stations_london.csv
data/raw/: ons_regions_2021_en_bgc.gpkg  tfl_lines_by_mode.json  tfl_stop_points_stations.json  thames_centerline.geojson
data/raw/tfl_route_sequences/: tfl_line_bakerloo_route_sequence_inbound.json  tfl_line_bakerloo_route_sequence_outbound.json  tfl_line_central_route_sequence_inbound.json  tfl_line_central_route_sequence_outbound.json  tfl_line_circle_route_sequence_inbound.json  tfl_line_circle_route_sequence_outbound.json  tfl_line_district_route_sequence_inbound.json  tfl_line_district_route_sequence_outbound.json  tfl_line_dlr_route_sequence_inbound.json  tfl_line_dlr_route_sequence_outbound.json  tfl_line_elizabeth_route_sequence_inbound.json  tfl_line_elizabeth_route_sequence_outbound.json  tfl_line_hammersmith-city_route_sequence_inbound.json  tfl_line_hammersmith-city_route_sequence_outbound.json  tfl_line_jubilee_route_sequence_inbound.json  tfl_line_jubilee_route_sequence_outbound.json  (+22 more)
notebooks/: 01_network_metrics.ipynb  02_h1_bottleneck_analysis.ipynb  03_h2_resilience_analysis.ipynb  04_h1_validation.ipynb  04_h3_equity_analysis.ipynb
scripts/: bootstrap.py  unzip_raw_data.sh
scripts/data_ingestion/: 01_ingest_transit.py  02_ingest_thames.py  03_ingest_boundary.py  03_ingest_lsoa_imd.py  __init__.py
scripts/phases/: __init__.py  ingest_data.py  spatial_processor.py  transform_load_network_data.py
src/connectivity/: __init__.py  crp.py  resilience.py
src/core/: __init__.py  cli_utils.py  config.py  data_loaders.py
src/data_processing/: __init__.py  network_build.py
src/geo/: equity.py  spatial.py
src/graph/: __init__.py  graph_utils.py  metrics.py  spectral.py
src/io/: __init__.py  compressed.py
src/models/: __init__.py  schemas.py  validate.py
src/vis/: vis_utils.py
